Changelog 12.13 - In main.js, I implemented logic to create assignment JSON File. In index.js, implemented loading of exercise cards with assigned letter to html.Ran into trouble loading JSON file in index.js so arbitrary assignments for A-E are used.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,6 +65,20 @@ body{
     height:50vh;
 }
 
+.card-container{
+    width:80%;
+    margin:4rem auto;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 2rem;
+}
+
+.card{
+    padding:2rem;
+    box-shadow: 0 0 .4rem .4rem rgba(0,0,0,0.2);
+    background-color: red;
+}
+
 .footer{
     position: static;
     z-index: 1;
