Changelog 12.14 - Inside index.html script tags, I implemented an event listener to display cards based on keyup value which changes .card class in style.css. This works but only in the case of one letter at a time (enter a letter, backspace, enter a new letter). Cards only display in alphabetical order at this time also. Lastly, I changed the submit button to a clear button to set the display back to 'none' for all cards

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,21 +62,31 @@ body{
 .workoutDisplay{
     background-color: beige;
     margin: 0;
-    height:50vh;
 }
 
 .card-container{
     width:80%;
     margin:4rem auto;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 2rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .card{
+    display: none; /* for logic to reveal element when user types */
     padding:2rem;
-    box-shadow: 0 0 .4rem .4rem rgba(0,0,0,0.2);
+    margin: 10px;
+    box-shadow: 0 0 .2rem .2rem rgba(0,0,0,0.2);
     background-color: red;
+}
+
+.card-heading{
+    color:white;
+    margin: 0;
+}
+.card-body{
+    color: white;
+    margin: 0;
 }
 
 .footer{
