--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,10 +11,81 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #FAF9F6;
+    transition: background-color 0.3s;
 }
 h3, h4{
     margin: 4px auto;
     font-size: 0.75rem;
+}
+
+#darkMode-label{
+    width:75px;
+    height: 25px;
+    position: relative;
+    display: block;
+    background: #ffffff;
+    border-radius: 50px;
+    box-shadow: inset 0 5px 15px rgba(0,0,0,0.4), inset 0 -5px 15px rgba(255,255,255,0.4);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#darkMode-label:after{
+    content:"";
+    width:35px;
+    height:20px;
+    position: absolute;
+    top:2px;
+    left:2px;
+    background: linear-gradient(180deg, #ffcc89, #d8860b);
+    border-radius: 180px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+#darkMode{
+    width: 0;
+    height: 0;
+    visibility: hidden;
+}
+
+#darkMode:checked + #darkMode-label{
+    background:#121212;
+}
+
+#darkMode:checked + #darkMode-label:after{
+    left:73px;
+    transform: translateX(-100%);
+    background: linear-gradient(180deg, #777,#121212);
+}
+
+body.dark-mode .main{
+    background-color: #121212;
+}
+body.dark-mode .footer{
+    color: #FAF9F6;
+}
+body.dark-mode .header,
+body.dark-mode .main,
+body.dark-mode .workoutDisplay {
+    background-color: #1e1e1e;
+    color: #fafafa;
+}
+body.dark-mode .card {
+    background-color: #333;
+    color: #fafafa;
+}
+
+body.dark-mode .searchBar {
+    background-color: #333;
+    color: #fafafa;
+}
+
+body.dark-mode input[type="text"],
+body.dark-mode input[type="submit"] {
+    background-color: #444;
+    color: #fafafa;
+    border: 2px solid #333;
 }
 .header{
     display: flex;
@@ -61,6 +132,10 @@ h3, h4{
     padding: 0;
 }
 
+#name::placeholder{
+    font-size: 2em;
+}
+
 #submit{
     width:10%;
     height: 55px;
@@ -73,6 +148,7 @@ h3, h4{
     height: 100%;
     background-color:#FAF9F6;
     margin: 0;
+
 }
 
 .card-container{
@@ -110,6 +186,7 @@ h3, h4{
     margin:0;
     padding: 0;
     bottom: 0;
+    transition: background-color 0.3s;
 }
 
 .image-container{
